# linux-101

./: .gitignore  README.md
code/day-1/client-server-over-udp/: README.md
code/day-1/client-server-over-udp/reserve/basic-client/: Makefile.am  csudsclient.exp  includes.h  libmain.c
code/day-1/client-server-over-udp/reserve/basic-server/: Makefile.am
code/day-1/client-server-over-udp/reserve/basic-server/csuds-server/: Makefile.am  externs.h  includes.h  libmain.c  prototypes.h  structs.h
code/day-1/client-server-over-udp/reserve/basic-server/csudsd/: Makefile.am  includes.h  main.c  prototypes.h  service.c
code/day-1/client-server-over-udp/reserve/basic-server/include/: csuds-server.h
code/day-1/client-server-over-udp/reserve/basic-tools/tools/: Makefile.am
code/day-1/client-server-over-udp/reserve/basic-tools/tools/csuds-cli/: Makefile.am  includes.h  main.c
code/day-1/client-server-over-udp/reserve/mt-server-with-signal/: main.c  signal.c
code/day-1/client-server-over-udp/reserve/server-listener-with-epoll/csuds-server/: Makefile.am  context.c  defines.h  globals.c  listener.c  poller.c  prototypes.h  structs.h
code/day-1/client-server-over-udp/src/: .gitignore  Makefile.am  configure.ac
code/day-1/client-server-over-udp/src/include/: csudsdefs.h  csudssys.h  csudsutils.h
code/day-1/client-server-over-udp/src/include/public/csuds/: client.h  csuds.h  service.h
code/day-1/client-server-over-udp/src/utils/: Makefile.am  atomic.c  externs.h  globals.c  includes.h  libmain.c  memory.c  prototypes.h  strings.c  structs.h
code/day-1/hello-world/: README.md
code/day-2/client-server-over-grpc/reserve/implement-cli/: Makefile.am  main.cpp
code/day-2/client-server-over-grpc/reserve/implement-grpc-client/include/: CsGrpcClientFactory.hpp  CsGrpcClientInterface.hpp  CsGrpcVersion.hpp
code/day-2/client-server-over-grpc/reserve/implement-grpc-client/src/: CsGrpcClient.cpp  CsGrpcClient.hpp  CsGrpcClientFactory.cpp  Makefile.am  libmain.cpp
code/day-2/client-server-over-grpc/reserve/implement-grpc-server/: CsGrpcService.cpp  CsGrpcService.hpp  CsGrpcServiceImpl.cpp  CsGrpcServiceImpl.hpp  Makefile.am  main.cpp
code/day-2/client-server-over-grpc/src/: Makefile.am  README.md  configure.ac
code/day-2/client-server-over-grpc/src/client/include/: CsGrpcVersion.hpp
code/day-2/client-server-over-grpc/src/client/src/: Makefile.am
code/day-2/client-server-over-grpc/src/idl/: CsGrpc.proto  README.md
code/day-2/client-server-over-grpc/src/include/: csgrpcdefs.h
code/day-2/client-server-over-grpc/src/server/: Makefile.am
code/day-2/client-server-over-grpc/src/server/csgrpcd/: Makefile.am  main.cpp
code/day-2/client-server-over-grpc/src/server/utils/include/: FileSystemUtils.hpp  Logger.hpp  UUIDGenerator.hpp
code/day-2/client-server-over-grpc/src/server/utils/src/: FileSystemUtils.cpp  Logger.cpp  Makefile.am  libmain.cpp
code/day-2/client-server-over-grpc/src/tools/: Makefile.am
code/day-2/client-server-over-grpc/src/tools/cli/: main.cpp
docs/: host-setup.md
docs/day-1/: autotools.md  commands.md  gdb.md  hello-world.md  logging.md  networking.md  posix-threads.md  process-management.md  security.md  shells.md  signals.md
docs/day-1/coding/: client-server-unix-domain-sockets.md
docs/day-1/exercises/: exercise-1.md  exercise-2.md
docs/day-2/coding/: client-server-over-grpc.md
scripts/: setup-dev-env.sh
